# milvus-helloworld

./: .gitignore  main.py  pyproject.toml
notebooks/milvus/: .gitignore  insert.ipynb  query.ipynb
ops/: compose.yml
