[project]
name = "py-play"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "huggingface-hub>=0.32.4",
    "iprogress>=0.4",
    "ipython>=9.3.0",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.3",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pymilvus>=2.5.10",
    "sentence-transformers>=4.1.0",
]
